--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "POC_in_vuejs",
+  "name": "poc-in-vuejs",
   "private": true,
   "type": "module",
   "version": "0.0.1",
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "chart.js": "^4.4.7",
     "core-js": "^3.37.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
+    "vue-chartjs": "^5.3.2",
     "vuetify": "^3.6.14"
   },
   "devDependencies": {
