--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy to GitHub Pages
 on:
   push:
     branches:
-      - vuejs  # or any branch you want to trigger the deployment from
+      - vuejs  # 触发部署的分支
 
 jobs:
   build:
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'  # Specify your Node.js version
+          node-version: '16'  # 根据项目需求调整 Node.js 版本
 
       # Install dependencies
       - name: Install dependencies
@@ -32,8 +32,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          folder: dist  # The build output folder
-          branch: vuejs_dist  # The branch where you want to deploy
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist  # 确保这是构建输出目录
+          publish_branch: vuejs_dist  # 部署到的分支
           commit_message: 'Deploy Vue.js app to GitHub Pages'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Automatically provided by GitHub Actions
