aggiornamento dei riferimenti ai sottoprogetti e aggiunta di variabili d'ambiente e porte nel file docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,48 @@
 services:
-  suppl-ai:
-    extends:
-      file: ./Suppl-AI/docker-compose.yml
-      service: suppl-ai
-    container_name: suppl-ai
+    suppl-ai:
+        extends:
+            file: ./Suppl-AI/docker-compose.yml
+            service: suppl-ai
+        environment:
+            - DATABASE_API_URL=http://database-api:8000
+        container_name: suppl-ai
+        ports:
+            - "3000:3000"
 
-  llm-api:
-    extends:
-      file: ./LLM-API/docker-compose.yml
-      service: llm-api
-    container_name: llm-api
+    llm-api:
+        extends:
+            file: ./LLM-API/docker-compose.yml
+            service: llm-api
+        container_name: llm-api
+        ports:
+            - "8001:8001"
 
-  database-api:
-    extends:
-      file: ./Database-API/docker-compose.yml
-      service: api
-    container_name: database-api
-    
-  mongo-db:
-    extends:
-      file: ./Database-API/docker-compose.yml
-      service: mongo-db
-    container_name: database-mongo
-    
-  mongo-express:
-    extends:
-      file: ./Database-API/docker-compose.yml
-      service: mongo-express
-    container_name: database-mongo-express
+    database-api:
+        extends:
+            file: ./Database-API/docker-compose.yml
+            service: api
+        environment:
+            - MONGO_DB_URL=mongo-db:27017
+            - LLM_API_URL=http://llm-api:8001
+        container_name: database-api
+        ports:
+            - "8000:8000"
+
+    mongo-db:
+        extends:
+            file: ./Database-API/docker-compose.yml
+            service: mongo-db
+        container_name: database-mongo
+        ports:
+            - "27017:27017"
+
+    mongo-express:
+        extends:
+            file: ./Database-API/docker-compose.yml
+            service: mongo-express
+        container_name: database-mongo-express
+        ports:
+            - "8081:8081"
 
 volumes:
-  mongodb_data:
+    mongodb_data:
